logs/Slang/chapter-6/6.24.2--cast_fn.sv.log
name: cast_fn
description: $cast function
should_fail: 0
tags: 6.24.2
files: /home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.24.2--cast_fn.sv
incdirs: 
top_module: 
rc: 1

../../home/travis/build/SymbiFlow/sv-tests/tests/chapter-6/6.24.2--cast_fn.sv:10:9: error: use of undeclared identifier '$cast'
		if (! $cast(a, 2.1 * 3.7))
		      ^~~~~
